--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -41,6 +41,9 @@ h1 {
   padding-bottom: 10px;
   padding-top: 10px;
 }
+.wrapper-flex-portfolio-small {
+  padding-bottom: 200px;
+}
 .contact-info li {
   display: inline-block;
   margin-right: 10px;
