--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -156,44 +156,40 @@
         </div>                   
       </section>
 
-      <section>
-        <div class='portfolio'>
-          <div class='container'>
-            <h1>Check out our latest works</h1>
-            <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
-            <div class='wrapper-flex'>
-              <figure>
-                 <img src='img/image_granthotel.jpg' width='570px' height='390px'
-                 alt='Grand Motel gets an identity brushup'>
+      <section class='portfolio'>
+        <div class='container'>
+          <h1>Check out our latest works</h1>
+          <p>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</p>
+          <div class='wrapper-flex'>
+            <figure>
+              <img src='img/image_granthotel.jpg' width='570px' height='390px'
+              alt='Grand Motel gets an identity brushup'>
               <figcaption>
-                 <h1>Grand Motel gets an identity brushup</h1>
-                 <p>Identity</p>
+                <h1>Grand Motel gets an identity brushup</h1>
+                <p>Identity</p>
               </figcaption>
-              </figure>
-              <figure>
-                 <img src='img/image_figure2.jpg' width='570px' height='390px'
-                 alt='Fresh branding for a creative startup'>
+            </figure>
+            <figure>
+              <img src='img/image_figure2.jpg' width='570px' height='390px'
+              alt='Fresh branding for a creative startup'>
               <figcaption>
-                 <h1>Fresh branding for a creative startup</h1>
-                 <p>Identity</p>
+                <h1>Fresh branding for a creative startup</h1>
+                <p>Identity</p>
               </figcaption>
-              </figure>
-            </div>
-            <ul class='wrapper-flex wrapper-flex-portfolio-small'>
-              <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
-              <li><img src='img/image-item-2.jpg' width='270px' height='187px'></li>
-              <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
-              <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
-            </ul> 
-            <div class="portfolio-pagination">
-              <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-              </ul>
-            </div>
-          </div> 
-        </div>
+            </figure>
+          </div>
+          <ul class='wrapper-flex wrapper-flex-portfolio-small'>
+            <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
+            <li><img src='img/image-item-2.jpg' width='270px' height='187px'></li>
+            <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
+            <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
+          </ul> 
+          <ul class="wrapper-flex portfolio-pagination">
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+          </ul>
+        </div>   
       </section>
        
       <section class='cooperation'>
