--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -87,37 +87,7 @@ h1 {
 
 
 
-/*сотрудничество*/
-.cooperation {
-  background-color:#fff; 
-}
-.cooperation-block {
-  text-align: center;
-  width: 800px;
-  min-height: 360px;
-  margin: 0 auto;
-  padding-top: 120px;
-}
-.cooperation-block h1 {
-  font-size: 44px;
-  line-height: 54px;
-}
-.cooperation-block p {
-  font-size: 22px;
-  line-height: 34px;
-  margin-top: 23px;
-}
-a.button-link {
-  display: inline-block;
-  color: #ffffff;
-  background: #00bc9c;
-  text-transform: uppercase;
-  letter-spacing: 0.030em;
-  border-radius: 3px;
-  box-shadow: 0 -2px rgba(0,0,0,0.15) inset;
-  padding: 16px 27px;
-  margin-top: 36px; 
-}
+
 /*footer*/
 .footer {
   background-color: #2f4052;
@@ -249,6 +219,8 @@ a.button-link {
 @import "slider.less";
 @import "features-list.less";
 @import "portfolio.less";
+@import "cooperation.less";
+
 
 
 
