cooperation fix fix

--- a/src/styles/cooperation.less
+++ b/src/styles/cooperation.less
@@ -5,7 +5,7 @@
   margin: 0 auto;
 	padding-top: 120px;
 	text-align: center;
-	background-color:#fff; 
+	background-color: #fff; 
 	
 	h1 {
 		font-size: 44px;
@@ -22,9 +22,9 @@
 		display: inline-block;
 		padding: 16px 27px;
 	  margin-top: 36px;
-		color: #ffffff;
+		color: #fff;
 		text-transform: uppercase;
-	  letter-spacing: .030em;
+	  letter-spacing: .03em;
 	  background: #00bc9c;	  
 	  border-radius: 3px;
 	  box-shadow: 0 -2px rgba(0,0,0,.15) inset;
