--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -6,62 +6,89 @@ body {
   font-size: 15px;
   font-weight: 700;
   color: #506a85;
-  background-color: #ffffff;
+  background-color: #fff;
 }
+
 a {
   text-decoration: none;
   color: #506a85;
 }
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
 p,
 h1 {
   margin: 0;
 }
+
 .container {
   width: 1170px;
   margin: 0 auto;
   padding: 0;
   border: 1px solid green;
 }
+
 .header {
   background-color: #fff;
 }
+
 .contact-links {
   background-color: #f5f7fa;
 }
+
 .wrapper-flex {
   display: flex;
   justify-content: space-between;
 }
+
 .wrapper-flex-header {
-  padding-bottom: 10px;
-  padding-top: 10px;
+  padding: 10px 0;
 }
+
 .wrapper-flex-portfolio-small {
   padding-bottom: 200px;
+}
+
+.wrapper-flex-footer-nav {
+  width: 370px;
+  align-items: center;
+}
+
+.wrapper-flex-footer-info {
+  min-height: 365px;
+}
+
+.wrapper-flex-footer-ending {
+  min-height: 83px;
+  align-items: center;
 }
 .contact-info li {
   display: inline-block;
   margin-right: 10px;
 }
+
 .contact-info span {
   margin-left: 8px;
 }
+
 .social-icons {
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
+
 .social-icons li {
   margin-right: 20px;
 }
+
 .social-icons li:last-child {
   margin-right: 10px;
 }
+
 .main-navigation {
   display: flex; 
   flex-wrap: wrap;
@@ -69,157 +96,30 @@ h1 {
   align-items: center;
   min-height: 112px;
 }
+
 .site-navigation {
   display: flex; 
   flex-wrap: wrap;
   width: 803px;
   text-transform: uppercase;
 }
+
 .site-navigation a {
   display: block;
   padding: 48px 22px;
 }
+
 .search {
+  display: flex;
   margin-right: 10px;
-  display: flex;
   align-items: center;
 }
 
-
-
-
-/*footer*/
-.footer {
-  background-color: #2f4052;
-}
-.footer h1 {
-  font-size: 16px;
-  line-height: 22px;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  color: #fff;
-  margin-bottom: 22px;
-  padding-top: 68px;
-}
-.footer p {
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: 0.020em;
-  color: #a3b1bf;
-  margin-bottom: 17px;
-  font-weight: 500;
-}
-.footer a {
-  color: #a3b1bf;
-  font-size: 15px;
-  line-height: 22px;
-  letter-spacing: 0.020em;
-}
-.footer-info {
-  min-height: 365px;
-  display: flex;
-  justify-content: space-between;
-}
-.footer-item {
-  color: #fff;
-  width: 270px;
-  /*border: 2px solid yellow;*/
-}
-.footer-img {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-.footer-img li {
-  margin: 0;
-  margin-right: 5px;
-}
-.footer-item p:nth-of-type(1) {
-  margin-top: 13px;
-}
-.footer-item a:nth-of-type(2) {
-  position: relative;
-}
-.footer-item a:nth-of-type(2)::after {
-  content: "";
-  position: absolute;
-  top: 7px;
-  right: -15px;
-  width: 10px;
-  height: 9px;
-  background-image: url("../img/icon-right.png");
-  background-repeat: no-repeat;
-  background-position: 0 0;
-}
-.icon img {
-  margin-right: 5px;
-}
-.icon span {
-  font-weight: 500;
-}
-.subscribe {
-  width: 270px; 
-  min-height: 40px;
-  background-color: #4e5c6c;
-  border-radius: 3px;
- }
- input[type="email"] {
-  min-width: 150px;
-  border: none; 
-  outline: none;
-  -webkit-appearance: none;
-  background-color: #4e5c6c;
-  height: 45px;
-  color: #a3b1bf;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
-  font-size: 14px;
-  line-height: 22px;
-  font-weight: 600;
-  margin-left: 15px;
-  letter-spacing: 0.020em;
-  vertical-align: middle;  
-}
- input[type="submit"] {
-  width: 88px; 
-  height: 30px; 
-  margin-left: 0;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
-  font-size: 13px;
-  font-weight: 600;
-  letter-spacing: 0.030em;
-  color: #fff;
-  border: none;
-  background-color: #00bc9c;
-  border-radius: 3px;
-  box-shadow: 0 -2px rgba(0,0,0,0.15) inset;
- }
- .footer-wrap {
-  background-color: #283645;
-}
-.footer-ending {
-  min-height: 83px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.footer-ending p,
-.footer-ending a {
-  margin: 0;
-  color: #707e8c;  
-}
-.footer-navigation {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 370px;
-  align-items: center;
-}
 @import "slider.less";
 @import "features-list.less";
 @import "portfolio.less";
 @import "cooperation.less";
+@import "footer.less";
 
 
 
