--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -206,7 +206,7 @@
 
     <footer class='footer'>
       <div class='container'>
-        <div class='footer-info'>
+        <div class='wrapper-flex wrapper-flex-footer-info'>
           <div class='footer-item'>
             <h1>Who we are</h1>
             <a href="#">
@@ -269,11 +269,11 @@
           </div>
         </div>
       </div>
-      <div class="footer-wrap">
+      <div class="footer-ending">
         <div class="container">
-          <div class="footer-ending">
+          <div class="wrapper-flex wrapper-flex-footer-ending">
              <p>© 2014 REEN. All rights reserved.</p>
-            <ul class='footer-navigation'>
+            <ul class='wrapper-flex wrapper-flex-footer-nav'>
               <li><a href='#'>Home</a></li>
               <li>·</li>
               <li><a href='#'>Portfolio</a></li>
