--- a/src/styles/cooperation.less
+++ b/src/styles/cooperation.less
@@ -1,9 +1,8 @@
 /*сотрудничество*/
 .cooperation {
 	width: 100%;
-  min-height: 360px;
   margin: 0 auto;
-	padding-top: 120px;
+	padding: 120px 0;
 	text-align: center;
 	background-color: #fff; 
 	
