--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -207,7 +207,7 @@
     <footer class='footer'>
       <div class='container'>
         <div class='wrapper-flex wrapper-flex-footer-info'>
-          <div class='footer-item'>
+          <div class='footer-item footer-item-1'>
             <h1>Who we are</h1>
             <a href="#">
               <img src='img/footer_logo (1).svg'
@@ -218,11 +218,11 @@
                  labor. Laceaque eictemperum quiae
                  sitiorem rest non restibusaes 
                  maio es dem tumquam.</p>
-            <a href="#">
+            <a  class="about" href="#">
                <span>More about us</span>
             </a>   
           </div>
-          <div class='footer-item'>
+          <div class='footer-item footer-item-2'>
              <h1>Latest works</h1>
             <ul class='footer-img'>
                <li><img src='img/footer-image-1.jpg' width="126px" height="86px"></li>
@@ -231,14 +231,14 @@
                <li><img src='img/footer-image-4.jpg' width="126px" height="86px"></li>
             </ul>
           </div>
-          <div class='footer-item'>
+          <div class='footer-item footer-item-3'>
               <h1>Get in touch</h1>
               <p>Doloreiur quia commolu ptatemp dolupta
                  oreprerum tibusam eumenis et consent 
                  accullignis dentibea autem inisita.</p>
             <ul>
               <li>
-                <a class="icon" href="#">
+                <a href="#">
                    <img src='img/icon-location.svg' width="7px" height="12px">
                    <span>84 Street, City, State 24813</span>
                 </a>
@@ -257,7 +257,7 @@
               </li>
             </ul>   
           </div>
-          <div class='footer-item'>
+          <div class='footer-item footer-item-4'>
               <h1>Free updates</h1>
               <p>Conecus iure posae volor remped
                  modis laut lor volor accabora incim
