--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -1,55 +1,57 @@
 /*footer*/
 .footer {
-		background-color: #2f4052;
+  background-color: #2f4052;
+  font-weight: 500;
+
+	h1 {
+		margin-bottom: 22px;
+		padding-top: 68px;
+		font-size: 16px;
+		line-height: 22px;
+		text-transform: uppercase;
+		letter-spacing: .1em;
+		color: #fff;
+	}
+
+  p {
+		margin-bottom: 17px;
+		font-size: 14px;
+		line-height: 22px;
+		letter-spacing: .02em;
     font-weight: 500;
-
-		h1 {
-			margin-bottom: 22px;
-			padding-top: 68px;
-			font-size: 16px;
-			line-height: 22px;
-			text-transform: uppercase;
-			letter-spacing: .1em;
-			color: #fff;
-		}
-
-		p {
-			margin-bottom: 17px;
-			font-size: 14px;
-			line-height: 22px;
-			letter-spacing: .02em;
-      font-weight: 500;
-      color: #a3b1bf;
-		}
-		a {
-			font-size: 15px;
-			line-height: 22px;
-      letter-spacing: .02em;
-      color: #a3b1bf;
-		}  
+    color: #a3b1bf;
+  }
+    
+	a {
+		font-size: 15px;
+		line-height: 22px;
+    letter-spacing: .02em;
+    color: #a3b1bf;
+  }  
   
   .footer-item {
     color: #fff;
     width: 270px;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow;*/
   }
+
   .footer-img {
     display: flex;
-    flex-wrap: wrap;
     justify-content: flex-start;
+    flex-wrap: wrap;
 
     li {
       margin: 0;
       margin-right: 5px;
     }
   }
-  
-  .footer-item-1 {
 
+  .footer-item-1 {
+      
     p {
       margin-top: 13px;
     }
-    
+
     span {
       position: relative;
       font-weight: 700;
@@ -65,9 +67,9 @@
       }
     }
   }
-  
+    
   .footer-item-3 {  
-
+      
     img {
       margin-right: 5px;
     }
@@ -78,45 +80,46 @@
     min-height: 40px;
     background-color: #4e5c6c;
     border-radius: 3px;
-   }
-   input[type="email"] {
-    min-width: 150px;
-    height: 45px;
-    margin-left: 15px;
-    border: none; 
-    outline: none;
-    background-color: #4e5c6c;
-    color: #a3b1bf;
-    font-family: 'Source Sans Pro', Arial, sans-serif;
-    font-size: 14px;
-    line-height: 22px;
-    font-weight: 600;
-    letter-spacing: .02em;
-    vertical-align: middle;  
-  }
-   input[type="submit"] {
-    width: 88px; 
-    height: 30px; 
-    margin-left: 0;
-    border: none;
-    border-radius: 3px;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-family: 'Source Sans Pro', Arial, sans-serif;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .03em;
-    color: #fff;
-    background-color: #00bc9c;
-    box-shadow: 0 -2px rgba(0,0,0,.15) inset;
-   }
-  
-  .footer-ending {
-		background-color: #283645; 
 
-		p, a {
-			margin: 0;
-		  color: #707e8c;  
+    input[type="email"] {
+      min-width: 150px;
+      height: 45px;
+      margin-left: 15px;
+      border: none; 
+      outline: none;
+      background-color: #4e5c6c;
+      color: #a3b1bf;
+      font-family: 'Source Sans Pro', Arial, sans-serif;
+      font-size: 14px;
+      line-height: 22px;
+      font-weight: 600;
+      letter-spacing: .02em;
+      vertical-align: middle;  
+    }
+
+    input[type="submit"] {
+      width: 88px; 
+      border: none;
+      border-radius: 3px;
+      text-transform: uppercase;
+      text-decoration: none;
+      font-family: 'Source Sans Pro', Arial, sans-serif;
+      font-size: 13px;
+      font-weight: 600;
+      letter-spacing: .03em;
+      line-height: 30px;
+      color: #fff;
+      background-color: #00bc9c;
+      box-shadow: 0 -2px rgba(0,0,0,.15) inset;
+    }
+  }
+
+  .footer-ending {
+    background-color: #283645; 
+
+    p, a {
+      margin: 0;
+      color: #707e8c;  
     }
 	}
 } 
