add btn scroll-up

--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -95,11 +95,11 @@
     }
 
     .icon-left {
-      background-image: url("../img/icon-left-open-mini.png");
+      background-image: url(../img/icon-left-open-mini.png);
     }
     
     .icon-right {
-      background-image: url("../img/icon-right-open-mini.png");
+      background-image: url(../img/icon-right-open-mini.png);
     }
   }
 }
