--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -115,13 +115,27 @@
   }
 
   .footer-ending {
+    position: relative;
     background-color: #283645; 
 
     p, a {
       margin: 0;
       color: #707e8c;  
     }
-	}
+  }
+  
+  .scroll-up {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    width: 40px;
+    height: 40px;
+    background: rgba(80, 106, 133,.75) no-repeat 12px 15px;
+    background-image: url(../img/icon-up-open-mini.png);
+    border-radius: 3px;
+    opacity: .5;
+  }
 } 
   
   
