--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -120,12 +120,12 @@
       <section>
         <div class='container'>
           <div class="features">
-             <h1>Beautiful. Clean. Responsive.</h1>
-             <p>REEN is a high-quality solution for those
-                who want a beautiful website in no time. 
-                It's fully responsive and will adapt itself to any mobile device.
-                iPad, iPhone, Android,
-                it doesn't matter. Your content will always looks its absolute best.</p>
+            h1>Beautiful. Clean. Responsive.</h1>
+            <p>REEN is a high-quality solution for those
+              who want a beautiful website in no time. 
+              It's fully responsive and will adapt itself to any mobile device.
+              iPad, iPhone, Android,
+              it doesn't matter. Your content will always looks its absolute best.</p>
           </div>
           <ul class='features-list'>
             <li class='features-item features-item-1'>
@@ -287,6 +287,7 @@
               <li><a href='#'>Contact</a></li>
             </ul>
           </div>
+          <a  class="scroll-up" href="#"></a>  
         </div>
       </div>
     </footer>
