--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -99,6 +99,7 @@
 
     input[type="submit"] {
       width: 88px; 
+      margin-left: 10px;
       border: none;
       border-radius: 3px;
       text-transform: uppercase;
