--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -120,7 +120,7 @@
       <section>
         <div class='container'>
           <div class="features">
-            h1>Beautiful. Clean. Responsive.</h1>
+            <h1>Beautiful. Clean. Responsive.</h1>
             <p>REEN is a high-quality solution for those
               who want a beautiful website in no time. 
               It's fully responsive and will adapt itself to any mobile device.
@@ -213,12 +213,12 @@
               <img src='img/footer_logo (1).svg'
                width="130px" height="32px" alt='footer_logo'>
             </a>
-              <p>Magnis modipsae voloratati andigen
+            <p>Magnis modipsae voloratati andigen
                  daepeditem quiate re porem que aut
                  labor. Laceaque eictemperum quiae
                  sitiorem rest non restibusaes 
                  maio es dem tumquam.</p>
-            <a  class="about" href="#">
+            <a class="about" href="#">
                <span>More about us</span>
             </a>   
           </div>
@@ -287,7 +287,7 @@
               <li><a href='#'>Contact</a></li>
             </ul>
           </div>
-          <a  class="scroll-up" href="#"></a>  
+          <a class="scroll-up" href="#"></a>  
         </div>
       </div>
     </footer>
