footer fix subscribe

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -210,7 +210,7 @@
           <div class='footer-item footer-item-1'>
             <h1>Who we are</h1>
             <a href="#">
-              <img src='img/footer_logo (1).svg'
+              <img src='img/footer_logo.svg'
                width="130px" height="32px" alt='footer_logo'>
             </a>
             <p>Magnis modipsae voloratati andigen
@@ -259,8 +259,8 @@
           </div>
           <div class='footer-item footer-item-4'>
               <h1>Free updates</h1>
-              <p>Conecus iure posae volor remped
-                 modis laut lor volor accabora incim
+              <p>Conecus iure posae volor remped modis</br> 
+                aut lor volor accabora incim
                  resto explabo.</p>
             <form action="#" class="subscribe" method="POST">
               <input type="email" placeholder="Enter your email address" required>    
