--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -76,7 +76,8 @@
   }
 
   .subscribe {
-    width: 270px; 
+    position: relative;
+    min-width: 270px; 
     min-height: 40px;
     background-color: #4e5c6c;
     border-radius: 3px;
@@ -84,22 +85,24 @@
     input[type="email"] {
       min-width: 150px;
       height: 45px;
-      margin-left: 15px;
+      margin-left: 5px;
+      padding-right: 0;
       border: none; 
       outline: none;
       background-color: #4e5c6c;
       color: #a3b1bf;
-      font-family: 'Source Sans Pro', Arial, sans-serif;
       font-size: 14px;
       line-height: 22px;
-      font-weight: 600;
+      font-weight: 500;
       letter-spacing: .02em;
       vertical-align: middle;  
     }
 
     input[type="submit"] {
+      position: absolute;
+      top: 7px;
+      right: 5px;
       width: 88px; 
-      margin-left: 10px;
       border: none;
       border-radius: 3px;
       text-transform: uppercase;
