--- a/src/styles/cooperation.less
+++ b/src/styles/cooperation.less
@@ -17,7 +17,7 @@
 		line-height: 34px;
 	}
 	
-	a.button-link {
+	.button-link {
 		display: inline-block;
 		padding: 16px 27px;
 	  margin-top: 36px;
