--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -32,14 +32,6 @@ h1 {
   border: 1px solid green;
 }
 
-.header {
-  background-color: #fff;
-}
-
-.contact-links {
-  background-color: #f5f7fa;
-}
-
 .wrapper-flex {
   display: flex;
   justify-content: space-between;
@@ -66,55 +58,8 @@ h1 {
   min-height: 83px;
   align-items: center;
 }
-.contact-info li {
-  display: inline-block;
-  margin-right: 10px;
-}
 
-.contact-info span {
-  margin-left: 8px;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.social-icons li {
-  margin-right: 20px;
-}
-
-.social-icons li:last-child {
-  margin-right: 10px;
-}
-
-.main-navigation {
-  display: flex; 
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 112px;
-}
-
-.site-navigation {
-  display: flex; 
-  flex-wrap: wrap;
-  width: 803px;
-  text-transform: uppercase;
-}
-
-.site-navigation a {
-  display: block;
-  padding: 48px 22px;
-}
-
-.search {
-  display: flex;
-  margin-right: 10px;
-  align-items: center;
-}
-
+@import "header.less";
 @import "slider.less";
 @import "features-list.less";
 @import "portfolio.less";
