--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -1,64 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
-  font-size: 15px;
-  font-weight: 700;
-  color: #506a85;
-  background-color: #fff;
-}
 
-a {
-  text-decoration: none;
-  color: #506a85;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-p,
-h1 {
-  margin: 0;
-}
-
-.container {
-  width: 1170px;
-  margin: 0 auto;
-  padding: 0;
-  border: 1px solid green;
-}
-
-.wrapper-flex {
-  display: flex;
-  justify-content: space-between;
-}
-
-.wrapper-flex-header {
-  padding: 10px 0;
-}
-
-.wrapper-flex-portfolio-small {
-  padding-bottom: 200px;
-}
-
-.wrapper-flex-footer-nav {
-  width: 370px;
-  align-items: center;
-}
-
-.wrapper-flex-footer-info {
-  min-height: 365px;
-}
-
-.wrapper-flex-footer-ending {
-  min-height: 83px;
-  align-items: center;
-}
-
+@import "global.less";
 @import "header.less";
 @import "slider.less";
 @import "features-list.less";
