--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,60 +10,60 @@
   </head>
   <body>
     <header class='header'>
-      <div class='contact-links'>
+      <div class='header__wrapper'>
         <div class='container'>
-          <div class='wrapper-flex wrapper-flex-header'>
-           <ul class='contact-info'>
-             <li>
-               <a href='#'>
-                <img src='img/icon-mail-1.png' width='11' height='9' alt='info@reen.com'>
-                <span>info@reen.com</span>
-               </a>                      
-             </li>
-             <li>
-               <a href='#'>
-                <img src='img/icon-mobile.png' width='7' height='13' alt=' +00(123)4567890'>
-                <span>+00(123)4567890</span>
-               </a>
-             </li>
-           </ul>
-           <ul class='social-icons'>
-             <li>
-               <a href='#'>
-                <img src='img/icon-s-facebook.png' width='6' height='11' alt='Facebook'>
-               </a>
-             </li>
-             <li>
-               <a href='#'>
-                <img src='img/icon-s-gplus.png' width='11' height='11' alt=' Gplus'>
-               </a>
-             </li>
-             <li>
-               <a href='#'>
-               <img src='img/icon-s-twitter.png' width='11' height='9' alt='Twitter'>
-               </a>
-             </li>
-             <li>
-               <a href='#'>
-               <img src='img/icon-s-pinterest.png' width='9' height='11' alt=' Pinterest'>
-               </a>
-             </li>
-             <li>
-               <a href='#'>
-               <img src='img/icon-s-behance.png' width='13' height='9' alt=' Behance'>
-               </a>
-             </li>
-             <li>
-               <a href='#'>
-               <img src='img/icon-s-dribbble.png' width='12' height='11' alt='Dribbble'>
-               </a>
-             </li>
-           </ul>
+          <div class='wrapper-flex wrapper-flex--top-header'>
+            <ul class='header__list'>
+              <li class='header__item'>
+                <a href='#'>
+                  <img src='img/icon-mail-1.png' alt='info@reen.com'>
+                  <span class='header__info'>info@reen.com</span>
+                </a>                      
+              </li>
+              <li class='header__item'>
+                <a href='#'>
+                  <img src='img/icon-mobile.png' alt='+00(123)4567890'>
+                  <span class='header__info'>+00(123)4567890</span>
+                </a>
+              </li>
+            </ul>
+            <ul class='header__list header__list--social'>
+              <li class='header__item'>
+                <a href='#'>
+                  <img src='img/icon-s-facebook.png' alt='Facebook'>
+                </a>
+              </li>
+              <li class='header__item'>
+                <a href='#'>
+                  <img src='img/icon-s-gplus.png' alt=' Gplus'>
+                </a>
+              </li>
+              <li class='header__item'>
+                <a href='#'>
+                  <img src='img/icon-s-twitter.png' alt='Twitter'>
+                </a>
+              </li>
+              <li class='header__item'>
+                <a href='#'>
+                 <img src='img/icon-s-pinterest.png' alt='Pinterest'>
+                </a>
+              </li>
+              <li class='header__item'>
+                <a href='#'>
+                 <img src='img/icon-s-behance.png' alt='Behance'>
+                </a>
+              </li>
+              <li class='header__item header__item--last'>
+                <a href='#'>
+                 <img src='img/icon-s-dribbble.png' alt='Dribbble'>
+                </a>
+              </li>
+            </ul>
           </div>  
         </div>
       </div>
       <div class='container'>
-        <div class='main-navigation'>
+        <div class='wrapper-flex wrapper-flex--wrap wrapper-flex--header'>
           <a class='header-logo'>
             <img src='img/logo.svg' width='161' height='40' alt='Logo REEN'>
           </a>
