header BEM & modul global fix

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -34,35 +34,35 @@ h1 {
 .wrapper-flex {
   display: flex;
   justify-content: space-between;
-}
 
-.wrapper-flex--wrap {
-  flex-wrap: wrap;
-}
+  &--wrap {
+    flex-wrap: wrap;
+  }
 
-wrapper-flex--header {
-  align-items: center;
-  min-height: 112px;
-}
+  &--header {
+    align-items: center;
+    min-height: 112px;
+  }
 
-.wrapper-flex--top-header {
-  padding: 10px 0;
-}
+  &--top-header {
+    padding: 10px 0;
+  }
 
-.wrapper-flex-portfolio-small {
-  padding-bottom: 200px;
-}
+  &--portfolio-small {
+    padding-bottom: 200px;
+  }
 
-.wrapper-flex-footer-nav {
-  width: 370px;
-  align-items: center;
-}
+  &--footer-nav {
+    width: 370px;
+    align-items: center;
+  }
 
-.wrapper-flex-footer-info {
-  min-height: 365px;
-}
+  &--footer-info {
+    min-height: 365px;
+  }
 
-.wrapper-flex-footer-ending {
-  min-height: 83px;
-  align-items: center;
+  &--footer-ending {
+    min-height: 83px;
+    align-items: center;
+  }
 }
