--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -11,6 +11,11 @@
     align-items: center;
   }
 
+  &__logo {
+    width: 161px;
+    height: 40px;
+  }
+
   &__item {
     margin-right: 10px;
 
@@ -26,28 +31,26 @@
   &__info {
     margin-left: 8px;
   }
-
-  &__img {
-    width: 13px;
-    height: 11px;
-  }
 }
 
-.site-navigation {
+.main-menu {
   display: flex; 
   flex-wrap: wrap;
 
-  
-}
-
-.site-navigation a {
-  display: block;
-  padding: 48px 22px;
-  text-transform: uppercase;
+  &__link {
+    display: block;
+    padding: 48px 22px;
+    text-transform: uppercase;
+  }
 }
 
 .search {
   display: flex;
   margin-right: 10px;
   align-items: center;
+
+  &__img {
+    width: 12px;
+    height: 12px;
+  }
 }
