--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,7 @@
               </li>
               <li class='header__item'>
                 <a href='#'>
-                  <img src='img/icon-s-gplus.png' alt=' Gplus'>
+                  <img src='img/icon-s-gplus.png' alt='Gplus'>
                 </a>
               </li>
               <li class='header__item'>
@@ -64,25 +64,35 @@
       </div>
       <div class='container'>
         <div class='wrapper-flex wrapper-flex--wrap wrapper-flex--header'>
-          <a class='header-logo'>
-            <img src='img/logo.svg' width='161' height='40' alt='Logo REEN'>
-          </a>
-          <ul class='site-navigation'>
-            <li><a href='home.html'>Home</a></li>
-            <li><a href='portfolio.html'>Portfolio</a></li>
-            <li><a href='blog.html'>Blog</a></li>
-            <li><a href='pages.html'>Pages</a></li>
-            <li><a href='features.html'>Features</a></li>
-            <li><a href='megamenu.html'>Mega Menu</a></li>
-            <li><a href='contact.html'>Contact</a></li>
-          </ul>
-          <ul class='search'>
-            <li>
-              <a class='search-icon' href='search.html'>
-                <img src='img/icon-search.png' width='12' height='12' alt='Search'>
-              </a>
+          <img class='header__logo' src='img/logo.svg' alt='Logo REEN'>
+
+          <ul class='main-menu'>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='home.html'>Home</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='portfolio.html'>Portfolio</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='blog.html'>Blog</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='pages.html'>Pages</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='features.html'>Features</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='megamenu.html'>Mega Menu</a>
+            </li>
+            <li class="main-menu__item">
+              <a class="main-menu__link" href='contact.html'>Contact</a>
             </li>
           </ul>
+
+          <div class='search'>
+            <img class='search__img' src='img/icon-search.png' alt='Search'>
+          </div>
         </div>
       </div>
     </header>
@@ -178,7 +188,7 @@
               </figcaption>
             </figure>
           </div>
-          <ul class='wrapper-flex wrapper-flex-portfolio-small'>
+          <ul class='wrapper-flex wrapper-flex--portfolio-small'>
             <li><img src='img/image-item-1.jpg' width='270px' height='187px'></li>
             <li><img src='img/image-item-2.jpg' width='270px' height='187px'></li>
             <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
@@ -206,7 +216,7 @@
 
     <footer class='footer'>
       <div class='container'>
-        <div class='wrapper-flex wrapper-flex-footer-info'>
+        <div class='wrapper-flex wrapper-flex--footer-info'>
           <div class='footer-item footer-item-1'>
             <h1>Who we are</h1>
             <a href="#">
@@ -271,9 +281,9 @@
       </div>
       <div class="footer-ending">
         <div class="container">
-          <div class="wrapper-flex wrapper-flex-footer-ending">
+          <div class="wrapper-flex wrapper-flex--footer-ending">
              <p>© 2014 REEN. All rights reserved.</p>
-            <ul class='wrapper-flex wrapper-flex-footer-nav'>
+            <ul class='wrapper-flex wrapper-flex--footer-nav'>
               <li><a href='#'>Home</a></li>
               <li>·</li>
               <li><a href='#'>Portfolio</a></li>
