header bem fix & modul global fix

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -67,27 +67,13 @@
           <img class='header__logo' src='img/logo.svg' alt='Logo REEN'>
 
           <ul class='main-menu'>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='home.html'>Home</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='portfolio.html'>Portfolio</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='blog.html'>Blog</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='pages.html'>Pages</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='features.html'>Features</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='megamenu.html'>Mega Menu</a>
-            </li>
-            <li class="main-menu__item">
-              <a class="main-menu__link" href='contact.html'>Contact</a>
-            </li>
+            <li><a class="main-menu__link" href='home.html'>Home</a></li>
+            <li><a class="main-menu__link" href='portfolio.html'>Portfolio</a></li>
+            <li><a class="main-menu__link" href='blog.html'>Blog</a></li>
+            <li><a class="main-menu__link" href='pages.html'>Pages</a></li>
+            <li><a class="main-menu__link" href='features.html'>Features</a></li>
+            <li><a class="main-menu__link" href='megamenu.html'>Mega Menu</a></li>
+            <li><a class="main-menu__link" href='contact.html'>Contact</a></li>
           </ul>
 
           <div class='search'>
