--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -87,29 +87,29 @@
       <div class='slider'>
         <ul>
           <li>
-            <img src='img/image-1.jpg'>
-            <div class="slider-content">
-              <h1>Made for Designers</h1>
-              <p>Create your online portfolio in minutes with
+            <img class="slider__img" src='img/image-1.jpg'>
+            <div class="slider__content">
+              <h1 class="slider__title">Made for Designers</h1>
+              <p class="slider__text">Create your online portfolio in minutes with
                   the professionally and lovingly designed REEN</br>
                   website template. Customize your site with versatile
                   and easy to use features.</p>
-              <a class='button-slide-1' href='#'>Get Started Now</a>
+              <a class='slider__button' href='#'>Get Started Now</a>
             </div>
           </li>
         </ul>
-        <div class="pagination">
-          <ul>
-            <li class="active"></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
-        </div>        
-        <ul class="icon-next">
-          <li class="arrow icon-left"></li>
-          <li class="arrow icon-right"></li>
+
+        <ul class="pagination">
+            <li class="pagination__item pagination__item--active"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+            <li class="pagination__item"></li>
+        </ul>
+
+        <ul class="arrows">
+          <li class="arrows__icon arrows__icon--left"></li>
+          <li class="arrows__icon arrows__icon--right"></li>
         </ul>
       </div>
 
@@ -180,11 +180,17 @@
             <li><img src='img/image-item-3.jpg' width='270px' height='187px'></li>
             <li><img src='img/image-item-4.jpg' width='270px' height='187px'></li> 
           </ul> 
-          <ul class="wrapper-flex portfolio-pagination">
-            <li></li>
-            <li class="active"></li>
-            <li></li>
+          
+          <ul class="wrapper-flex pagination pagination--portfolio-small">
+            <li class="pagination__item"></li>
+            <li class="pagination__item pagination__item--active"></li>
+            <li class="pagination__item"></li>
           </ul>
+         
+          <ul class="portfolio-arrows">
+              <li class="arrow-portfolio icon-left "></li>
+              <li class="arrow-portfolio icon-right "></li>
+            </ul>
         </div>   
       </section>
        
