--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -3,106 +3,112 @@
   position: relative;
   width: 100%;
 
-  img {
+  &__img {
     width: 100%;
     min-height: 886px;   
     background-color: #a3b1bf; 
   }
 
-  .slider-content { 
+  &__content { 
     position: absolute; 
     top: 50%;
     left: 0;
     transform: translateY(-50%);
     width: 100%;
     text-align: center;
+  }
 
-    h1 {
-      padding-bottom: 10px;
-      font-size: 78px;
-      line-height: 88px;
-      letter-spacing: .06em;
-      text-transform: uppercase;
-      color: #fff;      
-    }
+  &__title {
+    padding-bottom: 10px;
+    font-size: 78px;
+    line-height: 88px;
+    letter-spacing: .06em;
+    text-transform: uppercase;
+    color: #fff;      
+  }
 
-    p {
-      padding-bottom: 60px;
-      font-size: 24px;
-      line-height: 33px;
-      letter-spacing: .02em;
-      font-weight: normal;
-      color: #a3b1bf;      
-    }
+  &__text {
+    padding-bottom: 60px;
+    font-size: 24px;
+    line-height: 33px;
+    letter-spacing: .02em;
+    font-weight: normal;
+    color: #a3b1bf;      
+  }
     
-    a {
-      padding: 23px 70px;
-      font-size: 18px;
-      font-weight: normal;
-      letter-spacing: .025em;
-      text-align: center;
-      text-transform: uppercase;
-      text-decoration: none;
-      border-radius: 3px;
-      color: #fff;
-      background: #00bc9c;
-      box-shadow: 0 -2px rgba(0,0,0,.15) inset;      
+  &__button {
+    padding: 23px 70px;
+    font-size: 18px;
+    font-weight: normal;
+    letter-spacing: .025em;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-radius: 3px;
+    color: #fff;
+    background: #00bc9c;
+    box-shadow: 0 -2px rgba(0,0,0,.15) inset;      
+  }
+}
+
+/*pagination*/
+
+.pagination {
+  position: absolute;
+  right: 50%;
+  transform: translateX(50%);
+  bottom: -18px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 145px;
+  height: 45px;
+  margin: 0 auto;
+  padding: 0 5px;
+  border-radius: 3px;
+  background-color: #fff; 
+  
+  &__item {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: #506a85;
+  
+    &--active {
+      background-color: #00bc9c;
     }
   }
+}
 
-  .pagination {
-    position: absolute;
-    bottom: -18px;
-    width: 100%;
+.arrows {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 
-    ul {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      width: 145px;
-      height: 45px;
-      margin: 0 auto;
-      padding: 0 5px;
-      border-radius: 3px;
-      background-color: #fff; 
-
-      li {
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        background: #506a85;
-
-        &.active {
-          background-color: #00bc9c;
-        }
-      }
-    }
-  }
-
-  .icon-next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-
-    .arrow {
-      width: 60px;
-      height: 60px;
-      background: rgba(80, 106, 133,.75) no-repeat 20px 15px;
-      opacity: .5;
-    }
-
-    .icon-left {
+  &__icon {
+    width: 60px;
+    height: 60px;
+    background: rgba(80, 106, 133,.75) no-repeat 20px 15px;
+    opacity: .5;
+  
+    &--left {
       background-image: url(../img/icon-left-open-mini.png);
     }
-    
-    .icon-right {
+   
+    &--right {
       background-image: url(../img/icon-right-open-mini.png);
     }
   }
 }
+ 
+
+
+
+    
+
 
 
 
