--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -89,12 +89,14 @@
           <li>
             <img class="slider__img" src='img/image-1.jpg'>
             <div class="slider__content">
-              <h1 class="slider__title">Made for Designers</h1>
-              <p class="slider__text">Create your online portfolio in minutes with
+              <div class='container'>
+                <h1 class="slider__title slider__title--grey">Made for Designers</h1>
+                <p class="slider__text">Create your online portfolio in minutes with
                   the professionally and lovingly designed REEN</br>
                   website template. Customize your site with versatile
                   and easy to use features.</p>
-              <a class='slider__button' href='#'>Get Started Now</a>
+                <a class='slider__button' href='#'>Get Started Now</a>
+              </div>
             </div>
           </li>
         </ul>
@@ -115,33 +117,34 @@
 
       <section>
         <div class='container'>
-          <div class="features">
-            <h1>Beautiful. Clean. Responsive.</h1>
-            <p>REEN is a high-quality solution for those
+          <div class="common-features">
+            <h1 class="common-features__title">Beautiful. Clean. Responsive.</h1>
+            <p class="common-features__text">REEN is a high-quality solution for those
               who want a beautiful website in no time. 
               It's fully responsive and will adapt itself to any mobile device.
               iPad, iPhone, Android,
               it doesn't matter. Your content will always looks its absolute best.</p>
           </div>
-          <ul class='features-list'>
-            <li class='features-item features-item-1'>
-              <h1>Passion</h1>
+
+          <ul class='features'>
+            <li class='features__item features__item--heart'>
+              <h1 class='features__title'>Passion</h1>
               <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
                 aut labor. Laceaque quiae sitiorem rest
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
             </li>
-            <li class='features-item features-item-2'>
-              <h1>Creativity</h1>
+            <li class='features__item features__item--lamp'>
+              <h1 class="features__title">Creativity</h1>
               <p>Magnis modipsae que lib voloratati
                 andigen daepeditem quiate re porem
                 aut labor. Laceaque quiae sitiorem rest
                 non restibusaes maio es dem tumquam
                 core posae volor remped modis volor.</p>
             </li>
-            <li class='features-item features-item-3'>
-              <h1>Quality</h1>
+            <li class='features__item features__item--star'>
+              <h1 class="features__title">Quality</h1>
               <p>Magnis modipsae que lib voloratati
                  andigen daepeditem quiate re porem
                  aut labor. Laceaque quiae sitiorem rest
@@ -149,6 +152,7 @@
                  core posae volor remped modis volor.</p>
             </li>
           </ul>   
+          
         </div>                   
       </section>
 
