slider BEM is ready

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -90,7 +90,7 @@
             <img class="slider__img" src='img/image-1.jpg'>
             <div class="slider__content">
               <div class='container'>
-                <h1 class="slider__title slider__title--grey">Made for Designers</h1>
+                <h1 class="slider__title">Made for Designers</h1>
                 <p class="slider__text">Create your online portfolio in minutes with
                   the professionally and lovingly designed REEN</br>
                   website template. Customize your site with versatile
