--- a/src/styles/slider.less
+++ b/src/styles/slider.less
@@ -34,12 +34,14 @@
     color: #fff; 
     
     &--grey {
-      background-color: #c3f143;
+      display: inline-block;
+      padding: 20px 40px;
+      background-color: #506a85;
     }
   }
 
   &__text {
-    padding-bottom: 60px;
+    padding: 30px 0 100px;
     font-size: 24px;
     line-height: 33px;
     letter-spacing: .02em;
